# assignment-iv

./: .env  .gitignore  Makefile  README.md  iwansusanto.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: eb5cb3ca4d0b_create_table.py
app/: celery.py  main.py
app/core/: db.py  setting.py
app/models/: setorsampah.py  tabungan.py
app/modules/research/: methods.py  prompt.py  schema.py  tasks.py
app/schema/: setorsampah.py  tabungan.py
app/utils/: openapi.py  tavily.py
