[project]
name = "assignment-iv"
version = "0.1.0"
description = "Assignment IV - Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.135.0",
    "markdown>=3.10.2",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
    "redis>=7.2.1",
    "scalar-fastapi>=1.6.2",
    "tavily-python>=0.7.22",
    "uvicorn>=0.41.0",
    "weasyprint>=68.1",
]
